--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -1,29 +1,32 @@
+
 body,
 html {
   margin: 0;
   padding: 0;
   height: 100%;
-  background-color: #000; /* Black background */
+  background-color: #000000; /* Black background */
   display: flex;
   justify-content: center;
   align-items: center;
   overflow: hidden;
+  z-index: -1;
 }
 
 #particles-js {
   position: absolute;
   width: 100%;
   height: 100%;
+  z-index: -1;
 }
 
 .card-container {
   position: relative;
-  width: 80%; /* Changed from fixed width */
-  max-width: 400px; /* Max width for larger screens */
-  height: auto; /* Height auto for responsiveness */
+  width: 300px;
+  height: 300px;
   display: flex;
   justify-content: center;
   align-items: center;
+  /* border: 2px solid #0366d6; GitHub Blue border */
   border-radius: 35px; /* Rounded corners */
   transition: box-shadow 0.3s ease-in-out; /* Smooth transition for glow */
 }
@@ -31,6 +34,7 @@ html {
 .card {
   position: absolute;
   width: 90%;
+
   text-align: center;
   transition: transform 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
   border-radius: 35px;
@@ -39,7 +43,7 @@ html {
 
 .profile-card {
   z-index: 2; /* Top card */
-  height: auto; /* Height auto for responsiveness */
+  height: 250px;
   border: 2px solid #3c2a40; /* GitHub Blue border */
 }
 
@@ -50,20 +54,21 @@ html {
   display: flex;
   justify-content: center;
   align-items: center;
-  height: auto; /* Height auto for responsiveness */
+  height: 200px;
   border: 2px solid #0366d6;
 }
 
 .profile-img {
   width: 100%;
-  height: auto; /* Responsive image */
+  height: 100%;
   border-radius: 35px;
+
   transition: box-shadow 0.3s ease-in-out;
 }
 
 .social-icons {
   display: flex;
-  padding-top: 10px; /* Adjusted for responsiveness */
+  padding-top: 110px;
   justify-content: space-around;
   width: 100%;
 }
@@ -114,35 +119,4 @@ html {
 .social-card {
   background-color: #1e1e1e; /* Dark Gray for social card */
   opacity: 0; /* Initially hidden */
-}
-
-/* Media Queries for Responsive Design */
-@media (max-width: 768px) {
-  .card-container {
-    width: 90%; /* Adjust width for smaller screens */
-  }
-
-  .social-icons {
-    padding-top: 5px; /* Adjust padding for smaller screens */
-  }
-
-  .social-link {
-    width: 30px; /* Smaller icons for smaller screens */
-    height: 30px;
-  }
-}
-
-@media (max-width: 480px) {
-  .card-container {
-    flex-direction: column; /* Stack cards on smaller screens */
-    height: auto; /* Auto height for smaller screens */
-  }
-
-  .profile-card {
-    height: auto; /* Responsive height */
-  }
-
-  .social-card {
-    top: 20px; /* Adjust positioning */
-  }
 }
